added consumed stack logs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,6 +31,12 @@
     <script type="text/javascript" src="./js/moment.js"></script>
     <script type="text/javascript" src="./js/bootstrap-datetimepicker.js"></script>
 
+    <style>
+      #logs { list-style-type: none; margin: 0; padding: 0; }
+      #logs li { padding: 5px 10px; }
+      #logs li:nth-child(odd) { background: #eee; }
+    </style>
+
 </head>
 
 <body class="sidebar-mini skin-black sidebar-collapse">
@@ -166,86 +172,134 @@
     <!-- Main content -->
     <section class="content">
 
-        <!-- Default box -->
-        <div class="col-md-4">
-            <div class="box box-primary" style="height: 100%;">
-                <div class="box-header with-border">
-                    <h3 class="box-title">Upload CoA file</h3>
-        
-                    <div class="box-tools pull-right">
-                    <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip"
-                            title="Collapse">
-                        <i class="fa fa-minus"></i></button>
-                    <!--<button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
-                        <i class="fa fa-times"></i></button>
-                    </div>-->
-                </div>
-                <div class="box-body">
-                    <form action="" method="post" id="upload_form" name="upload_form" class="form-upload">
-
-                        <div class="box-header with-border">
-                            
-                            <div class="xlf_div" style="padding-bottom: 10px;">
-                                <input type="file" name="xlfile" id="xlf" />
-                            </div>
-
+        <div class="row">
+            <!-- Default box Uploader -->
+            <div class="col-md-4">
+                <div class="box box-primary" style="height: 100%;">
+                    <div class="box-header with-border">
+                        <h3 class="box-title">Upload CoA file</h3>
+            
+                        <div class="box-tools pull-right">
+                        <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip"
+                                title="Collapse">
+                            <i class="fa fa-minus"></i></button>
+                        <!--<button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
+                            <i class="fa fa-times"></i></button>-->
                         </div>
+                    </div>
+                    <div class="box-body">
+                        <form action="" method="post" id="upload_form" name="upload_form" class="form-upload">
 
-                        
-                        <div id="error">
-                            <!-- error / success will be shown here -->
-                        </div>
-                        
-                        <div class="box-body">
-                            <h3 class="box-title">Fill out the details:</h3>
-
-                                <div class="header_div" style="padding-bottom:10px;padding-top:10px;">
+                            <div class="box-header with-border">
                                 
-                                <div class="order_no_div" style="padding-bottom:15px;">
-                                    <!--onkeypress='return event.charCode >= 48 && event.charCode <= 57'-->
-                                    <small>Invoice number:</small>
-                                    <input type="text" class="form-control" id="order_no" name="order_no" placeholder="Invoice number"  data-validation="length alphanumeric" data-validation-length="min4"/>
+                                <div class="xlf_div" style="padding-bottom: 10px;">
+                                    <input type="file" name="xlfile" id="xlf" />
                                 </div>
 
-                                <small>Delivery date:</small>
-                                <div class='input-group date' name='datetimepicker1' id='datetimepicker1' style="padding-bottom:15px;">
-
-                                    <input type='text' class="form-control" id="delivery_date" name="delivery_date" placeholder="Delivery date"/>
-                                    <span class="input-group-addon">
-                                        <span class="glyphicon glyphicon-calendar"></span>
-                                    </span>
-                                    <script type="text/javascript">
-                                        $(function () {
-                                            $('#datetimepicker1').datetimepicker();
-                                        });
-                                    </script>
-                                </div>
-                                <div class="supplier_id" class="supplier_id" id="supplier_id" name="supplier_id" style="padding-bottom:1px;">
-                                    <!--use ejs here from supplier list table for select input-->
-                                    <small>Supplier ID:</small>
-                                    <select class="form-control" id="supplier_id" name="supplier_id">
-                                        <option value="TZS">
-                                            TZS
-                                        </option>
-                                    </select>
-                                </div>
                             </div>
 
-                            <div class="submit_div" style="padding-bottom: 5px;">
-                                <button id="btn-upload" class="btn btn-lg btn-warning btn-block" name="Submit" type="Submit" value="Upload" disabled>Upload</button>
+                            
+                            <div id="error">
+                                <!-- error / success will be shown here -->
                             </div>
+                            
+                            <div class="box-body">
+                                <h3 class="box-title">Fill out the details:</h3>
 
-                        </div>
-                          
-                    </form> 
+                                    <div class="header_div" style="padding-bottom:10px;padding-top:10px;">
+                                    
+                                    <div class="order_no_div" style="padding-bottom:15px;">
+                                        <!--onkeypress='return event.charCode >= 48 && event.charCode <= 57'-->
+                                        <small>Invoice number:</small>
+                                        <input type="text" class="form-control" id="order_no" name="order_no" placeholder="Invoice number"  data-validation="length alphanumeric" data-validation-length="min4"/>
+                                    </div>
+
+                                    <small>Delivery date:</small>
+                                    <div class='input-group date' name='datetimepicker1' id='datetimepicker1' style="padding-bottom:15px;">
+
+                                        <input type='text' class="form-control" id="delivery_date" name="delivery_date" placeholder="Delivery date"/>
+                                        <span class="input-group-addon">
+                                            <span class="glyphicon glyphicon-calendar"></span>
+                                        </span>
+                                        <script type="text/javascript">
+                                            $(function () {
+                                                $('#datetimepicker1').datetimepicker();
+                                            });
+                                        </script>
+                                    </div>
+                                    <div class="supplier_id" class="supplier_id" id="supplier_id" name="supplier_id" style="padding-bottom:1px;">
+                                        <!--use ejs here from supplier list table for select input-->
+                                        <small>Supplier ID:</small>
+                                        <select class="form-control" id="supplier_id" name="supplier_id">
+                                            <option value="1001">
+                                                TZS
+                                            </option>
+                                        </select>
+                                    </div>
+                                </div>
+
+                                <div class="submit_div" style="padding-bottom: 5px;">
+                                    <button id="btn-upload" class="btn btn-lg btn-warning btn-block" name="Submit" type="Submit" value="Upload" disabled>Upload</button>
+                                </div>
+
+                            </div>
+                            
+                        </form> 
+                    </div>
+                    <!-- /.box-body -->
+                    <div class="box-footer">
+                        <small style="float:right"><i>All details are required.</i></small>
+                    </div>
+                    <!-- /.box-footer-->
                 </div>
-                <!-- /.box-body -->
-                <div class="box-footer">
-                    <small style="float:right"><i>All details are required.</i></small>
-                </div>
-                <!-- /.box-footer-->
             </div>
+
+            <!-- Log Box-->
+            <div class="col-md-8">
+                <div class="box box-danger" style="height: 100%;">
+                    <div class="box-header with-border">
+                        <h3 class="box-title" style="padding-bottom:12px;">Consumed Stack IDs</h3>
+            
+                        <div class="box-tools pull-right">
+                        <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip"
+                                title="Collapse">
+                            <i class="fa fa-minus"></i></button>
+                        <!--<button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
+                            <i class="fa fa-times"></i></button>
+                        </div>-->
+                    </div>
+                    <!-- /.box-header -->
+                    <div class="box-body table-responsive no-padding">
+                    <table class="table table-hover">
+                        <tr>
+                        <th>ID</th>
+                        <th>Consumed Date</th>
+                        <th>Line</th>
+                        <th>Lot ID</th>
+                        <th>Barcode</th>
+                        </tr>
+                        <% for (let i=0; i < consumed_obj.length; i++) {  %>
+                        <tr>
+                        <td><%= consumed_obj[i].consumed_id %></td>
+                        <td><%= consumed_obj[i].consumed_date %></td>
+                        <td><%= consumed_obj[i].consumed_line %></td>
+                        <td><%= consumed_obj[i].lot_id %></td>
+                        <td><span class="label label-success"><%= consumed_obj[i].consumed_barcode %></span></td>
+                        </tr>
+                        <% } %>
+                    </table>
+                    <ul id="logs"></ul>
+                    </div>
+                    <!-- /.box-body -->
+                    <div class="box-footer">
+                        <small style="float:right"><i></i></small>
+                    </div>
+                    <!-- /.box-footer-->
+                </div>
+            </div>
+
         </div>
+        
         
         <!-- /.box -->
   
@@ -572,5 +626,17 @@
         xlf.addEventListener('change', handleFile, false);
     })();
 </script>
+
+
+<!--<script>
+  $(function () {
+    var socket = io();
+    socket.on('log box', function(msg){
+      $('#logs').append($('<li>').text(msg));
+    });
+  });
+</script> -->
+
+
 </body>
 </html>
