--- a/views/bcode.ejs
+++ b/views/bcode.ejs
@@ -31,6 +31,12 @@
     <script type="text/javascript" src="../js/moment.js"></script>
     <script type="text/javascript" src="../js/bootstrap-datetimepicker.js"></script>
 
+    <style>
+      #logs { list-style-type: none; margin: 0; padding: 0; }
+      #logs li { padding: 5px 10px; }
+      #logs li:nth-child(odd) { background: #eee; }
+    </style>
+
 </head>
 
 <body class="sidebar-mini skin-black sidebar-collapse">
@@ -167,6 +173,7 @@
     <!-- Main content -->
     <section class="content">
 
+      <div class="row">
         <!-- Default box -->
         <div class="col-md-4">
             <div class="box box-primary" style="height: 100%;">
@@ -178,8 +185,8 @@
                             title="Collapse">
                         <i class="fa fa-minus"></i></button>
                     <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
-                        <i class="fa fa-times"></i></button>
-                    </div>-->
+                        <i class="fa fa-times"></i></button>-->
+                    </div>
                 </div>
                 <div class="box-body">
                     <form action="" method="post" id="barcode_form" name="barcode_form" class="form-upload">
@@ -249,7 +256,52 @@
                 <!-- /.box-footer-->
             </div>
         </div>
+
+        <!-- Log Box-->
+        <div class="col-md-8">
+            <div class="box box-default" style="height: 100%;">
+                <div class="box-header with-border">
+                    <h3 class="box-title" style="padding-bottom:12px;">Saved Logs</h3>
         
+                    <div class="box-tools pull-right">
+                    <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip"
+                            title="Collapse">
+                        <i class="fa fa-minus"></i></button>
+                    <!--<button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
+                        <i class="fa fa-times"></i></button>
+                    </div>-->
+                </div>
+                <!-- /.box-header -->
+                <div class="box-body table-responsive no-padding">
+                    <table class="table table-hover">
+                        <tr>
+                        <th>ID</th>
+                        <th>Consumed Date</th>
+                        <th>Line</th>
+                        <th>Lot ID</th>
+                        <th>Barcode</th>
+                        </tr>
+                        <% for (let i=0; i < consumed_obj.length; i++) {  %>
+                        <tr>
+                        <td><%= consumed_obj[i].consumed_id %></td>
+                        <td><%= consumed_obj[i].consumed_date %></td>
+                        <td><%= consumed_obj[i].consumed_line %></td>
+                        <td><%= consumed_obj[i].lot_id %></td>
+                        <td><span class="label label-success"><%= consumed_obj[i].consumed_barcode %></span></td>
+                        </tr>
+                        <% } %>
+                    </table>
+                <ul id="logs"></ul>
+                </div>
+                <!-- /.box-body -->
+                <div class="box-footer">
+                    <small style="float:right"><i></i></small>
+                </div>
+                <!-- /.box-footer-->
+            </div>
+        </div>
+
+      </div>
         <!-- /.box -->
   
     </section>
@@ -561,5 +613,38 @@
         }
     });
 </script>
+<!--
+<script>
+  $(function () {
+    var socket = io();
+    $('form').submit(function(){
+      function getformData($form){
+        var unindexed_array = $form.serializeArray();
+        var indexed_array = {};
+
+        $.map(unindexed_array, function(n, i){
+          indexed_array[n['name']] = n['value'];
+        });
+
+        return indexed_array;
+      }
+
+      let $form = $('form');
+      let data = getformData($form);
+
+      socket.emit('log box', data);
+
+      return false;
+    });
+
+    
+    socket.on('log box', function(msg){
+      $('#logs').append($('<li>').text(msg));
+    });
+
+  });
+</script>
+
+-->
 </body>
 </html>
